aligned elements on homepage to comply the prototype ( fixes #1147 )

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -9,25 +9,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-a.highlighted_link {
-    border: 1px solid #202020;
-    background-color: transparent;
-    width: 97px;
-    height: 94px;
-    display: block;
-    float: left;
-    padding: 0px;
-    margin-top: 0px;
-    text-align: center;
-}
-
-a.highlighted_link:hover  {
-    border: 1px solid #E0B400;
-    background-color: #E0B400;
-}
-
 img {
     border: none
 }
@@ -1334,20 +1315,6 @@ select.language_level {
     padding: 0px;
 }
 
-#index_image img {
-    float: left;
-    padding: 2px;
-    border: 0;
-}
-
-#index_image {
-    width: 312px;
-    height: 290px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 /*index*/ /*container*/
 #box {
     position: relative;
@@ -1731,6 +1698,43 @@ div.best_video div.right img {
 /* End Footer Menu */
 
 /* footer */ /* register */
+
+#index_image {
+    /* larger width + extra left padding because of STUPID IE6 */
+    width: 315px;
+    height: 297px;
+    margin: 0 auto;
+    padding-left: 2px;
+}
+
+#index_image a {
+    border: 2px solid #2B2B2B;
+    display: block;
+    float: left;
+}
+
+#index_image a:hover  {
+    border-color: #E0B400;
+}
+
+#index_image img {
+    border: 0;
+}
+
+#under_index_image h2 {
+    color: #787880;
+    margin: 40px auto 0 auto;
+    font-size: 20px;
+    font-family: Myriad, Myriad Pro, sans-serif;
+    font-weight: bold;
+    letter-spacing: 3px;
+    text-align: center;
+    vertical-align: bottom;
+    height: 22px;
+    width: 308px;
+    padding-bottom: 2px;
+}
+
 #register a:hover {
     text-decoration: underline;
 }
@@ -1744,17 +1748,19 @@ div.best_video div.right img {
     color: #989188;
     font-size: 10px;
     text-align: left;
+    margin: 0 auto;
 }
 
 #register form {
-    margin: 0px;
+    margin: 0 auto;
     padding: 0px;
+    width: 308px;
 }
 
 #register fieldset {
-    border: 0px;
-    margin: 0px;
-    padding: 0px;
+    border: none;
+    margin: 0 auto;
+    padding: 0;
     width: 246px;
     line-height: 19px;
     float: left;
@@ -2516,33 +2522,31 @@ div.best_video div.right img {
 }
 
 #middle_left {
-    margin-top: 50px;
+    margin: 50px 13px 0 10px;
     vertical-align: bottom;
     text-align: left;
     float: left;
     width: 27%;
-    margin-left: 10px;
-    margin-right: 13px;
 }
 
 #middle #center {
     float: left;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
+    width: 320px;
 }
 
 #middle_right {
-    margin-top: 80px;
-    float: left;
-    margin-left: -10px;
-    width: 30%;
+    margin: 100px 0 0 0;
+    float: right;
+    width: 210px;
+    padding-right: 10px;
 }
 
 #middle_right ul {
     text-align: left;
     line-height: 17px;
+    padding: 0;
+    margin: 0;
+    list-style-position: inside;
 }
 
 #middle_right ul a {
@@ -2553,21 +2557,6 @@ div.best_video div.right img {
 
 #middle_right ul a:hover {
     text-decoration: underline;
-}
-
-#under_index_image h2 {
-    color: #787880;
-    margin: 40px 0 0 -1px;
-    font-size: 20px;
-    font-family: Myriad, Myriad Pro, sans-serif;
-    font-weight: bold;
-    letter-spacing: 3px;
-    text-align: center;
-    vertical-align: bottom;
-    height: 22px;
-    width: 307px;
-    padding-bottom: 2px;
-    float: left;
 }
 
 /* Help page */
